package cn.snwalker.design.creational.factory.simplefactory;

public class Rectangle implements Shape {
    @Override
    public void draw() {
        System.out.println("画了一个Rectangle");
    }
}
