package cn.snwalker.design.creational.factory.simplefactory;

public interface Shape {
    void draw();
}
